# lang-configs

./: README.md
go/: .air.toml  .golangci.yml  Makefile
python/: logger.py  pyproject.toml
typescript/: eslint.config.js
